static/css/abundantlysocial.css
body {
  min-height: 100vh;
  padding-top: 85px;
  /* background-color: var(--background); */
  font-family: Lato, sans-serif;
  color: var(--text-color);
  font-size: 18px;
  line-height: 30px;
  background-image: -webkit-linear-gradient(270deg, hsla(0, 0%, 100%, .31), hsla(0, 0%, 100%, .31)), url('https://res.cloudinary.com/modii/w_100,q_100,f_auto/v1533615746/abundantlysocial/spiration-light.png');
  background-image: linear-gradient(180deg, hsla(0, 0%, 100%, .31), hsla(0, 0%, 100%, .31)), url('https://res.cloudinary.com/modii/w_100,q_100,f_auto/v1533615746/abundantlysocial/spiration-light.png');
  background-position: 0px 0px, 50% 50%;
  background-size: auto, 100px;

}

h1 {
  margin-top: 20px;
  margin-bottom: 10px;
  font-size: 38px;
  line-height: 44px;
  font-weight: 700;
}

h2 {
  margin-top: 20px;
  margin-bottom: 10px;
  font-size: 32px;
  line-height: 36px;
  font-weight: bold;
}

h3 {
  margin-top: 20px;
  margin-bottom: 10px;
  font-size: 22px;
  line-height: 30px;
  font-weight: 700;
}

h4 {
  margin-top: 10px;
  margin-bottom: 10px;
  color: #4f3990;
  font-size: 22px;
  line-height: 24px;
  font-weight: 700;
}

h5 {
  margin-top: 10px;
  margin-bottom: 10px;
  font-size: 20px;
  line-height: 30px;
  font-weight: 700;
}

h6 {
  margin-top: 10px;
  margin-bottom: 10px;
  font-size: 18px;
  line-height: 28px;
  font-weight: 700;
}

p {
  margin-bottom: 10px;
  -webkit-box-flex: 1;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

a {
  text-decoration: underline;
}

img {
  display: inline-block;
  max-width: 100%;
}

blockquote {
  margin-bottom: 10px;
  padding: 10px 20px;
  border-left: 5px solid #e2e2e2;
  font-size: 18px;
  line-height: 22px;
}

figcaption {
  margin-top: 5px;
  font-size: 12px;
  text-align: left;
}

.navbar {
  position: static;
  left: 0px;
  top: 0px;
  right: 0px;
  margin-top: 0px;
  padding-top: 2px;
  padding-bottom: 2px;
  background-color: #fff;
  box-shadow: 0 0 15px 0 #333;
}

.hero_section {
  color: #ffffff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  overflow: hidden;
  min-height: 400px;
  margin-top: 0px;
  padding: 100px 10% 100px 0%;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  background-position: 0px 0px, 0px 0px, 50% 0px;
  background-size: auto, auto, cover;
  background-repeat: repeat, repeat, no-repeat;
  background-attachment: scroll, scroll, fixed;
  box-shadow: inset 0 0 27px -4px #333;
  -webkit-transform: translate3d(0px, 0px, -30px);
  transform: translate3d(0px, 0px, -30px);
  -webkit-transform-style: preserve-3d;
  transform-style: preserve-3d;
}

.nav_link {
  font-size: 16px;
  cursor: pointer;
}

.nav_link:hover {
  color: var(--primary);
}

.nav_link.w--current {
  padding-bottom: 21px;
  color: #333;
  font-weight: 700;
}

.nav_link.w--current:focus {
  color: #333;
  font-weight: 400;
}

.container {
  padding-right: 0px;
}

.brand {
  padding-top: 0px;
  padding-bottom: 10px;
  max-height: 100%;
}

.brand img {
  margin-bottom: 10px;
}

.brand.w--current {
  padding-top: 2px;
  padding-bottom: 0px;
}

.section {
  padding-top: 100px;
  padding-bottom: 0px;
  border-style: none;
  border-color: #373968;
  border-bottom-width: 20px;
  background-color: transparent;
  background-position: 0px 0px, 0px 0px, 50% 0px;
  background-size: auto, auto, cover;
  background-repeat: repeat, repeat, no-repeat;
  background-attachment: scroll, scroll, fixed;
  box-shadow: inset 0 2px 27px -3px #333;
  -webkit-perspective: 1001px;
  perspective: 1001px;
  -webkit-perspective-origin: 50% 50%;
  perspective-origin: 50% 50%;
}

.heading2 {
  margin-top: 0px;
  color: #000;
  text-align: center;
}

.heading2.testimonial_heading {
  margin-top: 20px;
  margin-bottom: 30px;
  font-size: 35px;
}

.button {
  padding: 15px 20px;
  float: none;
  border-radius: 0px;
  background-color: var(--primary);
  color: #ffffff;
  font-size: 20px;
  font-weight: 700;
  text-decoration: none;
}

.button:hover {
  background-color: var(--primary);
  filter: brightness(95%)
}

.button.small {
  height: 100%;
  padding: 10px 15px;
  font-size: 16px;
  line-height: 20px;
}

.hero_heading {
  margin-top: 0px;
  margin-bottom: 10px;
  color: #fff;
  font-size: 40px;
  line-height: 46px;
  text-align: left;
  text-transform: capitalize;
}

.paragraph {
  margin-bottom: 20px;
  opacity: 0.8;
  font-size: 18px;
  line-height: 26px;
}

.nav-menu {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-top: 10px;
  background-color: #fff;
}

.about_page_section {
  padding-top: 100px;
  padding-bottom: 100px;
  background-color: #373968;
  background-image: -webkit-linear-gradient(270deg, #fff 37%, #f0eefc);
  background-image: linear-gradient(180deg, #fff 37%, #f0eefc);
  -webkit-transition: opacity 1033ms ease, opacity 933ms ease;
  transition: opacity 1033ms ease, opacity 933ms ease;
}

.about_page_section.full-screen {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  min-height: 80vh;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -ms-flex-align: center;
  align-items: center;
}

.footer {
  padding-top: 50px;
  /* background-color: var(--background); */
  background-color: var(--footer-color);
  color: #fff;
}

.footer_text {
  float: left;
  color: #fff;
  text-align: left;
}
/* ... */

